# EasyDraw

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  occview.cpp  occview.h
